buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

repositories {
    mavenCentral()
    maven { url = "https://dvs1.progwml6.com/files/maven" }
}

version = "1.18.2-${verspec}.${verbuild}"
group = "me.towdium.jecalculation"
archivesBaseName = "JustEnoughCalculation"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: "1.18.2"
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods {
                jecalculation {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods {
                jecalculation {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'jecalculation', '--all', '--output', file('src/generated/resources/')
            mods {
                jecalculation {
                    source sourceSets.main
                }
            }
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.1.73'
    compileOnly fg.deobf('mezz.jei:jei-1.18.2:9.7.0.196:api')
    runtimeOnly fg.deobf('mezz.jei:jei-1.18.2:9.7.0.196')
    //testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
}

jar {
    manifest {
        attributes([
                "Specification-Title": "Just Enough Calculation",
                "Specification-Vendor": "Towdium",
                "Specification-Version": "${verspec}",
                "Implementation-Title": project.name,
                "Implementation-Version": "${verspec}.${verbuild}",
                "Implementation-Vendor" :"Towdium",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
